--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Watches</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;900&display=swap" rel="stylesheet">">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -16,12 +20,25 @@
             <nav class="main__nav">
                 <ul>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Wtches</a></li>
+                    <li><a href="#">Watches</a></li>
                     <li><a href="#">Boutiques</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
+                <div class="main__nav--right">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
             </nav>
         </div>
     </header>
+    <main>
+        <div class="main__wrapper">
+            <section class="main__section">
+                <p>Smart Watch</p>
+                <h1>CUSTOM<br>WATCHES<br>FOR ANY<br>OCCASION</h1>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
