Adding section__watches img

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;900&display=swap" rel="stylesheet">">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;900&display=swap" rel="stylesheet"
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <header>
         <div class="header__wrapper">
-            <div class="header__logo">
-                <p>Watches_Logo</p>
-            </div>
             <nav class="main__nav">
+                <div class="header__logo">
+                    <p>Watches_Logo</p>
+                </div>
                 <ul>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Watches</a></li>
@@ -37,6 +37,33 @@
             <section class="main__section">
                 <p>Smart Watch</p>
                 <h1>CUSTOM<br>WATCHES<br>FOR ANY<br>OCCASION</h1>
+            </section>
+            <section class="section__watches">
+                <article>
+                    <h2>EXPLORE WATCHES</h2>
+                    <div class="watches">
+                        <figure class="cards--1">
+                            <figcaption><a href="#">Smart<img src="img/5.jpg" alt="5"></a></figcaption>
+                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                        </figure>
+                        <figure class="cards--1">
+                            <figcaption><a href="#">Smart<img src="img/6.jpg" alt="6"></a></figcaption>
+                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                        </figure>
+                        <figure class="cards--1">
+                            <figcaption><a href="#">Smart<img src="img/7.jpg" alt="7"></a></figcaption>
+                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                        </figure>
+                        <figure class="cards--1">
+                            <figcaption><a href="#">Smart<img src="img/8.jpg" alt="8"></a></figcaption>
+                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                        </figure>
+                        <figure class="cards--1">
+                            <figcaption><a href="#">Smart<img src="img/9.jpg" alt="9"></a></figcaption>
+                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                        </figure>
+                    </div>
+                </article>
             </section>
         </div>
     </main>
