Adding video & modified section__watches

--- a/index.html
+++ b/index.html
@@ -39,31 +39,47 @@
                 <h1>CUSTOM<br>WATCHES<br>FOR ANY<br>OCCASION</h1>
             </section>
             <section class="section__watches">
-                <article>
-                    <h2>EXPLORE WATCHES</h2>
-                    <div class="watches">
-                        <figure class="cards--1">
-                            <figcaption><a href="#">Smart<img src="img/5.jpg" alt="5"></a></figcaption>
-                            <p>Lorem ipsum dolor sit amet consectetur</p>
-                        </figure>
-                        <figure class="cards--1">
-                            <figcaption><a href="#">Smart<img src="img/6.jpg" alt="6"></a></figcaption>
-                            <p>Lorem ipsum dolor sit amet consectetur</p>
-                        </figure>
-                        <figure class="cards--1">
-                            <figcaption><a href="#">Smart<img src="img/7.jpg" alt="7"></a></figcaption>
-                            <p>Lorem ipsum dolor sit amet consectetur</p>
-                        </figure>
-                        <figure class="cards--1">
-                            <figcaption><a href="#">Smart<img src="img/8.jpg" alt="8"></a></figcaption>
-                            <p>Lorem ipsum dolor sit amet consectetur</p>
-                        </figure>
-                        <figure class="cards--1">
-                            <figcaption><a href="#">Smart<img src="img/9.jpg" alt="9"></a></figcaption>
-                            <p>Lorem ipsum dolor sit amet consectetur</p>
-                        </figure>
+                <div class="section__wrapper">
+                    <article>
+                        <h2>EXPLORE WATCHES</h2>
+                        <div class="watches">
+                            <figure class="cards--1">
+                                <figcaption><a href="#"><img src="img/5.jpg" alt="5"></a>
+                                <a href="#">Smart watch</a>
+                                </figcaption>
+                            </figure>
+                            <figure class="cards--1">
+                                <figcaption><a href="#"><img src="img/6.jpg" alt="6"></a>
+                                <a href="#">Smart watch</a>
+                                </figcaption>
+                            </figure>
+                            <figure class="cards--1">
+                                <figcaption><a href="#"><img src="img/7.jpg" alt="7"></a>
+                                <a href="#">Smart watch</a>
+                                </figcaption>
+                            </figure>
+                            <figure class="cards--1">
+                                <figcaption><a href="#"><img src="img/8.jpg" alt="8"></a>
+                                <a href="#">Smart watch</a>
+                                </figcaption>
+                            </figure>
+                            <figure class="cards--1">
+                                <figcaption><a href="#"><img src="img/9.jpg" alt="9"></a>
+                                <a href="#">Smart watch</a>
+                                </figcaption>
+                            </figure>
+                        </div>
+                    </article>
+                </div>
+            </section>
+            <section>
+                <div class="section__videp--wrapper">
+                    <div id="video--box">
+                        <video loop controls>
+                           <source src="video/pexels-rodnae-productions-7947487 (720p).mp4">
+                        </video>
                     </div>
-                </article>
+                </div>
             </section>
         </div>
     </main>
