--- a/shop3.html
+++ b/shop3.html
@@ -1,11 +1,18 @@
 <div class="wrapper">
-    <div id="paris">
+    <div id="paris" class="section-shops">
         <h1>PARIS</h1>
-        <p>PARIS</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Quas, debitis voluptatum! Accusamus, aliquam quidem? Ex nesciunt quisquam 
-            ducimus suscipit at! Eligendi beatae dolorem quidem, odit odio aliquam itaque maxime harum, 
-            ipsa assumenda vitae labore optio quia amet animi ut in?</p>
+        <div class="des">
+            <p>Paris</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Quas, debitis voluptatum! Accusamus, aliquam quidem? Ex nesciunt quisquam 
+                ducimus suscipit at! Eligendi beatae dolorem quidem, odit odio aliquam itaque maxime harum, 
+                ipsa assumenda vitae labore optio quia amet animi ut in?</p>
+        </div>
             <img src="img/shop3.jpg" alt="shop3">
+            <div class="location">
+                <i class="fa-solid fa-location-dot location-icon"></i>
+                <p>Lorem, ipsum dolor.</p>
+                <h4>Paris</h4>
+            </div>
     </div>
 </div>
